# wal-rus

./: .dockerignore  .shellcheckrc  Cargo.toml  LICENSE  README.md
.github/actions/install-pg/: action.yml
.github/workflows/: ci.yml  pg-compat.yml
bench/: .gitignore  README.md  config.env.example  matrix.sh  op_matrix.sh  run.sh  run_op.sh  setup.sh
bench/scripts/: lib.sh  make_source_tarball.sh
bench/scripts/driver/: calibrate.sh  gen_schema.sql  pgbench_init.sh  run_workload.sh  workload_burst.sh
bench/scripts/sut/: 00_mount_nvme.sh  01_install_pg18.sh  02_build_walg.sh  03_build_walrus.sh  04_build_walg_archive.sh  05_install_pgbackrest.sh  10_init_pg.sh  11_write_walg_env.sh  20_walg.service  21_walrus.service  30_select_daemon.sh  40_smoke_test.sh
bench/terraform/: .terraform.lock.hcl  config.env.tftpl  deploy.tf  iam.tf  instances.tf  main.tf  network.tf  outputs.tf  s3.tf  variables.tf
bench/tools/: Cargo.toml
bench/tools/src/: lib.rs  viz.rs
ci/: backup_mark.sh  backup_show.sh  client_cert.sh  cross_tool_delta.sh  cross_tool_encryption.sh  cross_tool_forward.sh  cross_tool_lzma.sh  cross_tool_retention.sh  cross_tool_reverse.sh  cross_tool_stream.sh  daemon.sh  delta_sidecar.sh  full_backup.sh  lcov_merge.awk  lib.sh  scram_auth.sh  storage_copy.sh  tls_replication.sh  vm_test_cluster.sh  wal_overwrite.sh
docker/wal-receive/: Dockerfile  entrypoint.sh
docker/wal-receive/operator/: .gitignore  DESIGN.md  Makefile  PLAN.md  PROJECT  go.mod
docker/wal-receive/operator/api/v1/: groupversion_info.go  walreceiver_types.go  zz_generated.deepcopy.go
docker/wal-receive/operator/cmd/: main.go
docker/wal-receive/operator/config/crd/: kustomization.yaml
docker/wal-receive/operator/config/crd/bases/: walg.io_walreceivers.yaml
docker/wal-receive/operator/config/default/: kustomization.yaml
docker/wal-receive/operator/config/manager/: kustomization.yaml  manager.yaml
docker/wal-receive/operator/config/rbac/: leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
docker/wal-receive/operator/config/samples/: kustomization.yaml  walg_v1_walreceiver.yaml
docker/wal-receive/operator/internal/controller/: configmap.go  diff.go  service.go  sizing.go  statefulset.go  statefulset_hash_test.go  status.go  suite_test.go  walreceiver_controller.go  walreceiver_controller_test.go
docs/: DESIGN.md  TESTING.md  WALG_COMPAT.md
examples/: bench_increment.rs
plans/: DEVLOG.md  DEVLOG_delta.md  PHASEA.md  PHASEB.md  PHASEB2.md  PHASEC.md  PHASEC2.md  PHASED.md  PHASEE.md  PHASEF.md  PLAN.md
scripts/: vm-cross-tool.sh  vm-deploy.sh
scripts/ci/: backup_mark.sh  backup_show.sh  cross_tool_encryption.sh  cross_tool_forward.sh  cross_tool_retention.sh  cross_tool_reverse.sh  daemon.sh  full_backup.sh  lib.sh  scram_auth.sh  storage_copy.sh  tls_replication.sh  vm_test_cluster.sh  wal_overwrite.sh
src/: concurrency.rs  lib.rs  log.rs  main.rs  retry.rs  throttle.rs
src/cli/: mod.rs
src/compression/: mod.rs
src/config/: mod.rs  vars.rs
src/crypto/: libsodium.rs  mod.rs
src/daemon/: client.rs  mod.rs  protocol.rs  systemd.rs  uploader.rs
src/pg/: mod.rs  wal_summaries.rs
src/pg/backup/: copy.rs  delete.rs  delta.rs  fetch.rs  fs_push.rs  increment.rs  list.rs  mod.rs  push.rs  show.rs  tar_streamer.rs  wal_delta.rs
src/pg/replication/: base_backup.rs  conn.rs  mod.rs  server.rs  stream.rs  sync_conn.rs  tls.rs
src/pg/sync_replica/: api.rs  controller.rs  dr_tail.rs  mod.rs  receive.rs  service.rs  shared.rs
src/pg/sync_replica/docs/: README.md  side-channel-queries.md  state-machine.md  wal-record-lifecycle.md  wal-segment-lifecycle.md
src/pg/wal/: fetch.rs  mod.rs  prefetch.rs  push.rs  receive.rs  restore.rs  segment.rs  segment_file.rs  show.rs  sync_replica_controller.rs  verify.rs
src/pg/walparser/: mod.rs  parse.rs  state.rs  types.rs
src/storage/: check.rs  creds.rs  fs.rs  gcs.rs  mod.rs  retrying.rs  s3.rs  test_http.rs  tools.rs
tests/: backup_roundtrip.rs  cli_bin.rs  daemon_roundtrip.rs  retention.rs  vm_live.rs  wal_roundtrip.rs  walsender_server.rs  walsender_vs_libpq.rs
