[package]
name = "wal-rus"
version = "0.1.1"
edition = "2024"
rust-version = "1.89"
description = "Rust port of wal-g for PostgreSQL, optimized for no-overcommit hosts"
license = "Apache-2.0"
repository = "https://github.com/ClickHouse/wal-rus"
readme = "README.md"
keywords = ["postgres", "postgresql"]

[[bin]]
name = "walrus"
path = "src/main.rs"

[lib]
name = "walrus"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "signal", "sync", "time", "process"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-compression = { version = "0.4", default-features = false, features = ["tokio", "zstd", "brotli", "lz4", "lzma", "gzip"] }
hex = "0.4"
url = "2"
percent-encoding = "2"
base64 = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json", "form", "query", "http2"] }
crc32c = "0.6"
roaring = "0.11"
aws-lc-rs = "1"
quick-xml = "0.40"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tar = "0.4"
postgres-protocol = "0.6"
fallible-iterator = "0.2"
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
rustls-pki-types = "1"
rustls-pemfile = "2"
webpki-roots = "1"
dryoc = { version = "0.8", default-features = false, features = ["u64_backend"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3"

[features]
# Enabled only on the VM test runner: hits a real PG cluster at PGPORT
vm-test = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
