[package]
name = "bench-tools"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
publish = false
description = "walrus bench harness: 1 Hz resource sampler + CSV/plot analyzer"

# Standalone: NOT a member of the wal-rus package above this dir. Empty table
# makes this its own workspace root so cargo does not try to attach it to the
# parent package (which has no [workspace.members]).
[workspace]

[[bin]]
name = "bench-sampler"
path = "src/bin/sampler.rs"

[[bin]]
name = "bench-analyze"
path = "src/bin/analyze.rs"

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.102"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
csv = "1.4.0"
dejavu = "2.37.0"
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signal-hook = "0.4.4"
tiny-skia = "0.12.0"
